// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Tests  Actions Renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 10,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
        },
        Object {
          "writingDirection": "ltr",
        },
        Object {},
        Object {
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        Object {},
        undefined,
        Array [
          Object {
            "marginTop": 16,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Test
  </Text>
  <View
    style={
      Array [
        Object {
          "marginTop": 10,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0,
          "elevation": 0,
          "minWidth": 64,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": undefined,
          }
        }
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 4,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "marginLeft": 12,
                "marginRight": -4,
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  undefined,
                  Object {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <Text
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "letterSpacing": 1,
                    "marginHorizontal": 16,
                    "marginVertical": 9,
                    "textAlign": "center",
                  },
                  undefined,
                  Object {
                    "textTransform": "uppercase",
                  },
                  Object {
                    "color": "#6200ee",
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  undefined,
                ],
              ]
            }
          >
            Add Device
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EmptyState Tests  Description Renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 10,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
        },
        Object {
          "writingDirection": "ltr",
        },
        Object {},
        Object {
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        Object {},
        undefined,
        Array [
          Object {
            "marginTop": 16,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Test
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#6200ee",
        },
        Object {
          "writingDirection": "ltr",
        },
        Object {},
        Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        Object {},
        undefined,
        Array [
          Object {
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Description
  </Text>
</View>
`;

exports[`EmptyState Tests  Icon Renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 10,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#000000",
          "fontSize": 100,
        },
        Object {},
        Object {
          "fontFamily": "Material Design Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
    testID="icon"
  >
    󰞱
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
        },
        Object {
          "writingDirection": "ltr",
        },
        Object {},
        Object {
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        Object {},
        undefined,
        Array [
          Object {
            "marginTop": 16,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Test
  </Text>
</View>
`;

exports[`EmptyState Tests  Only Title Renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 10,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
        },
        Object {
          "writingDirection": "ltr",
        },
        Object {},
        Object {
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        Object {},
        undefined,
        Array [
          Object {
            "marginTop": 16,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    EmptyState
  </Text>
</View>
`;

exports[`EmptyState Tests  Title, actions, Description Renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 10,
      },
      undefined,
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#000000",
        },
        Object {
          "writingDirection": "ltr",
        },
        Object {},
        Object {
          "fontFamily": "System",
          "fontSize": 20,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        Object {},
        undefined,
        Array [
          Object {
            "marginTop": 16,
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    EmptyState
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#6200ee",
        },
        Object {
          "writingDirection": "ltr",
        },
        Object {},
        Object {
          "fontFamily": "System",
          "fontSize": 14,
          "fontWeight": "500",
          "letterSpacing": 0,
        },
        Object {},
        undefined,
        Array [
          Object {
            "textAlign": "center",
          },
          undefined,
        ],
      ]
    }
  >
    Description
  </Text>
  <View
    style={
      Array [
        Object {
          "marginTop": 10,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0,
          "elevation": 0,
          "minWidth": 64,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": undefined,
          }
        }
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 4,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "marginLeft": 12,
                "marginRight": -4,
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  undefined,
                  Object {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
          <Text
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "letterSpacing": 1,
                    "marginHorizontal": 16,
                    "marginVertical": 9,
                    "textAlign": "center",
                  },
                  undefined,
                  Object {
                    "textTransform": "uppercase",
                  },
                  Object {
                    "color": "#6200ee",
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  undefined,
                ],
              ]
            }
          >
            Add Device
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
